--- a/src/Component/style.css
+++ b/src/Component/style.css
@@ -13,7 +13,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgb(190, 239, 204);
+    background: rgb(227, 243, 232);
     padding: 30px 20px;
     border-radius: 8px;
 }
@@ -55,11 +55,10 @@ button {
 }
 
 .details {
-    margin: 5% 10%;
+    margin: 5% ;
 }
 
 table {
-    font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
